# ACE

./: .codedocs  .gitattributes  .gitignore  CMakeLists.txt  Disk.info  Doxyfile  Jenkinsfile  README.md  ace.ini  makefile
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: minor.md  new_component.md  significant_changes.md
ace/: config.h  macros.h  makefile  makefile.modern  types.h
ace/libfixmath/: fix16.c  fix16.h  fix16.hpp  fix16_exp.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fix16_trig_sin_lut.h  fixmath.h  fract32.c  fract32.h  uint32.c  uint32.h
ace/managers/: blit.c  blit.h  copper.c  copper.h  game.c  game.h  joy.c  joy.h  key.c  key.h  log.c  log.h  memory.c  memory.h  mouse.c  mouse.h  rand.c  rand.h  timer.c  timer.h  window.c  window.h
ace/managers/viewport/: camera.c  camera.h  scrollbuffer.c  scrollbuffer.h  simplebuffer.c  simplebuffer.h  tilebuffer.c  tilebuffer.h
ace/utils/: bitmap.c  bitmap.h  bitmapmask.c  bitmapmask.h  bmframe.c  bmframe.h  bobframes.c  bobframes.h  chunky.c  chunky.h  custom.c  custom.h  endian.h  extview.c  extview.h  font.c  font.h  palette.c  palette.h  planar.c  planar.h  tag.c  tag.h
cmake/: ace_config.cmake  ace_functions.cmake  ace_install.cmake
docs/: README.md  palette-plt-v2-changes.md
docs/contributing/: codestyle.md
docs/installing/: ace.md  compiler.md  tools.md
docs/programming/: ace_in_a_nutshell.md  advancedsprites.md  aga.md  audio.md  blit.md  blit_undraw.md  blits_with_mask.md  fixed_point.md  fonts.md  hello_world.md  loading_images.md  logging.md  moving_blits.md  os.md  palette.md  sprites.md  tilebuffer.md  using_bobs.md  view.md
docs/programming/res/: overworld.gpl
docs/tools/: audio_conv.md  bitmap_conv.md  font_conv.md  palette_conv.md
include/ace/: config.h  macros.h  types.h
include/ace/generic/: main.h  screen.h
include/ace/managers/: advancedsprite.h  audio.h  blit.h  bob.h  copper.h  game.h  joy.h  key.h  log.h  memory.h  misc_resource.h  mouse.h  ptplayer.h  ptplayer_private.h  rand.h  sdl_private.h  sprite.h  state.h  system.h  timer.h  window.h
include/ace/managers/viewport/: camera.h  scrollbuffer.h  simplebuffer.h  simplebuffer_private.h  tilebuffer.h
include/ace/utils/: assume.h  bitmap.h  bitmapmask.h  bmframe.h  chunky.h  custom.h  dir.h  disk_file.h  disk_file_private.h  endian.h  extview.h  fetchmode.h  file.h  font.h  mini_std.h  pak_file.h  palette.h  ptplayer.h  sprite.h  string.h  tag.h
include/bartman/: gcc8_c_support.h
include/fixmath/: fix16.h  fixmath.h  fract32.h  int64.h  uint32.h
include/mini_std/: ctype.h  errno.h  initializer_list  printf.h  sort_r.h  stdint.h  stdio.h  stdlib.h  string.h
showcase/: CMakeLists.txt  README.md  makefile  showcase
showcase/data/: 32c_pal.bm  32c_pal_interleaved.bm  blitToSmall.bm
showcase/data/fonts/: silkscreen.fnt
showcase/res/: amidb32.gpl  blitToSmall.gpl  pong.gpl  quaver.fnt
showcase/res/data/: 32c_pal_interleaved.bm  amidb32.plt  blitToSmall.plt
showcase/res/data/fonts/: silkscreen.fnt
showcase/src/: config.c  config.h  game.c  game.h  input.c  input.h  main.c  main.h  makefile
showcase/src/menu/: menu.c  menu.h  menulist.c  menulist.h
showcase/src/test/: blit.c  blit.h  blitsmalldest.c  blitsmalldest.h  buffer_reuse.c  buffer_reuse.h  buffer_scroll.c  buffer_scroll.h  copper.c  copper.h  diagnostics.c  diagnostics.h  font.c  font.h  input.c  input.h  interleaved.c  interleaved.h  lines.c  lines.h  scroll_tile_buffer.c  scroll_tile_buffer.h  simple_buffer_bpp.c  simple_buffer_bpp.h  twister.c  twister.h
src/: makefile  makefile.vbcc  types.h
src/ace/amiga/managers/: audio.c  blit.c  bob.c  copper.c  joy.c  key.c  log.c  memory.c  mouse.c  ptplayer.c  sprite.c  system.c  timer.c
src/ace/amiga/utils/: bitmap.c  custom.c  extview.c  file.c  sprite.c
src/ace/common/managers/: blit.c  (+6 more)
src/ace/managers/: advancedsprite.c  audio.c  blit.c  bob.c  copper.c  game.c  joy.c  key.c  log.c  memory.c  misc_resource.c  mouse.c  ptplayer.c  rand.c  sprite.c  state.c  system.c  timer.c  window.c
src/ace/utils/: assume.c  bitmap.c  bitmapmask.c  bmframe.c  chunky.c  custom.c  dir.c  disk_file.c  extview.c  file.c  font.c  pak_file.c  palette.c  ptplayer.c  sprite.c  string.c  tag.c
src/bartman/: gcc8_a_support.s  gcc8_c_support.c
src/fixmath/: fix16.c  fix16_exp.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fract32.c  uint32.c
src/managers/: blit.c  blit.h  copper.c  copper.h  game.c  game.h  joy.c  joy.h  key.c  key.h  log.c  log.h  memory.c  memory.h  mouse.c  mouse.h  rand.c  rand.h  timer.c  timer.h  window.c  window.h
src/managers/viewport/: camera.c  camera.h  scrollbuffer.c  scrollbuffer.h  simplebuffer.c  simplebuffer.h  tilebuffer.c  tilebuffer.h
src/mini_std/: ctype.c  intrin.c  printf.c  stdio_file.c  stdio_putchar.c  stdlib.c  string.c  strtoul.c
src/pario/: pario.s
src/utils/: bitmap.c  bitmap.h  bmframe.c  bmframe.h  bobframes.c  bobframes.h  custom.c  extview.c  extview.h  font.c  font.h  palette.c  palette.h
tools/: .gitignore  CMakeLists.txt
tools/bitmap_conv/: .gitignore  bitmap_conv.c  build.bat  dirt.bm
tools/fmt/include/fmt/: core.h  format-inl.h  format.h
tools/font_conv/: endian.h  font_conv.cpp  font_conv.h  main.cpp
tools/lut_gen/: fix16_lut.h  lut_gen.c  makefile
tools/palette_conv/: palette_conv.c
tools/src/: audio_conv.cpp  bitmap_conv.cpp  bitmap_extract.cpp  bitmap_transform.cpp  font_conv.cpp  mod_tool.cpp  pak_tool.cpp  palette_conv.cpp  tileset_conv.cpp
tools/src/common/: bitmap.cpp  bitmap.h  compress.cpp  compress.hpp  endian.h  exception.cpp  exception.h  fs.cpp  fs.h  glyph_set.cpp  glyph_set.h  json.c  json.h  logging.h  math.h  mod.cpp  mod.h  palette.cpp  palette.h  parse.h  rgb.cpp  rgb.h  sfx.cpp  sfx.h  stream.cpp  stream.h  utf8.h  wav.cpp  wav.h
tools/src/common/flags/: flags.hpp
tools/src/tools/: bitmap.cpp  bitmap.h  bitmap_converter.cpp  bitmap_converter.h  font_converter.cpp  font_converter.h  glyph_set.cpp  glyph_set.h  palette_converter.cpp  palette_converter.h
utils/palette_conv/: palette_conv.c
(+32 files in other folders)
